--- a/DealershipAuto.Business/DealershipAuto.Business.csproj
+++ b/DealershipAuto.Business/DealershipAuto.Business.csproj
@@ -84,6 +84,8 @@
     <Compile Include="ICar.cs" />
     <Compile Include="IDealership.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Proxy\Account.cs" />
+    <Compile Include="Proxy\SafeAccountProxy.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
