--- a/DealershipAuto.GUI/DealershipAuto.GUI.csproj
+++ b/DealershipAuto.GUI/DealershipAuto.GUI.csproj
@@ -34,6 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DealershipAuto.Business">
+      <HintPath>..\DealershipAuto.Business\bin\Debug\DealershipAuto.Business.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
