--- a/DealershipAuto.GUI/DealershipAuto.GUI.csproj
+++ b/DealershipAuto.GUI/DealershipAuto.GUI.csproj
@@ -62,6 +62,9 @@
     <Compile Include="Pages\BuyCustome.xaml.cs">
       <DependentUpon>BuyCustome.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Pages\BuySecond.xaml.cs">
+      <DependentUpon>BuySecond.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\BuySeries.xaml.cs">
       <DependentUpon>BuySeries.xaml</DependentUpon>
     </Compile>
@@ -97,6 +100,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Pages\BuyCustome.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Pages\BuySecond.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
